try to stop swiping on ios and fixed visibility of scroll to bottom button on chat messages

--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -11,4 +11,17 @@
         height: 35vh;
     }
 }
- 
+
+.messages button {
+    background-color: white !important;
+    animation: fadeIn ease 1s;
+}
+
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+.messages button:focus {
+    outline: none !important;
+}
